add citations and fix the logo link

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <div class="navbar">
-        <div class="left">
+        <a class="left" href="#welcome">
             <span class="logo">
                 <svg xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 640 640"><!--!Font Awesome Free v7.0.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.-->
@@ -19,7 +19,7 @@
                 </svg>
             </span>
             <h1>Durian Realms</h1>
-        </div>
+        </a>
         <div class="right">
             <a href="#" class="nav-item">
                 Welcome
